--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./images/chat_icon.png">
     <link rel="stylesheet" href="css/join.css">
-    <title>Chat app</title>
+    <title>Just Us</title>
 </head>
 <body>
     <div>
